--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Spring API
+name: build and deploy spring-api
 
 on:
   push:
@@ -7,12 +7,14 @@ on:
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-22.04 
+    name: build and deploy spring-api
+    runs-on: ubuntu-22.04  # Updated from ubuntu-20.04
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up JDK 21
+      - name: Setup JDK 21
         uses: actions/setup-java@v3
         with:
           distribution: 'corretto'
@@ -21,10 +23,12 @@ jobs:
       - name: Run unit tests
         run: mvn -B test --file pom.xml
 
-      - name: Build the application
-        run: mvn clean package --file pom.xml
+      - name: Build the app
+        run: |
+          mvn clean
+          mvn -B package --file pom.xml
 
-      - name: Log in to Docker Hub
+      - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
