--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,4 @@
 name: build and deploy spring-api
-
 on:
   push:
     branches:
@@ -7,9 +6,8 @@ on:
 
 jobs:
   build-deploy:
-    name: build and deploy spring-api
-    runs-on: ubuntu-22.04  # Updated from ubuntu-20.04
-
+    name: Build, push Docker image & deploy to EC2
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -25,8 +23,7 @@ jobs:
 
       - name: Build the app
         run: |
-          mvn clean
-          mvn -B package --file pom.xml
+          mvn clean package -B --file pom.xml
 
       - name: Login to Docker Hub
         uses: docker/login-action@v2
@@ -34,10 +31,23 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-      - name: Build and Push Docker image
+      - name: Build and push Docker image
         uses: docker/build-push-action@v4
         with:
           context: .
-          file: Dockerfile
+          dockerfile: Dockerfile
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/rest-api:latest
+
+      - name: Deploy to EC2 via SSH
+        uses: appleboy/ssh-action@v0.1.7
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            docker login -u ${{ secrets.DOCKER_HUB_USERNAME }} -p ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+            docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/rest-api:latest
+            docker stop spring-api || true
+            docker rm spring-api || true
+            docker run -d --name spring-api -p 80:8080 ${{ secrets.DOCKER_HUB_USERNAME }}/rest-api:latest
